--- a/MfProdutora/src/components/top-content/TopContent.module.css
+++ b/MfProdutora/src/components/top-content/TopContent.module.css
@@ -24,10 +24,10 @@ strong{
     text-align: center;
 
     /* H1R */
-    font-family: "Odibee Sans";
-    font-size: 3.25rem;
+    font-family: "Play", Helvetica, sans-serif;
+    font-size: 3.25rem;/*52px*/
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 102.523%; /* 53.312px */
     letter-spacing: -1.04px;
 }
@@ -35,5 +35,10 @@ strong{
 p{
     max-width: 523px;
     margin: 10px 0; 
+
+    font-size: 1.125rem;
+    font-style: normal;
+    line-height: 108.523%; /* 23.875px */
+    letter-spacing: 1.43px;
 }
 
