--- a/MfProdutora/src/global.css
+++ b/MfProdutora/src/global.css
@@ -6,7 +6,7 @@
   --support-02: #A0A0A0;
   --background: #000510;
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Readex Pro', Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -55,6 +55,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'Play', sans-serif;
 }
 
 button {
