--- a/MfProdutora/src/global.css
+++ b/MfProdutora/src/global.css
@@ -58,6 +58,16 @@ h1 {
   font-family: 'Play', sans-serif;
 }
 
+h3{
+  font-family: 'Play', sans-serif;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 102.523%; /* 53.312px */
+  letter-spacing: -1.04px;
+}
+
+
 button {
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -78,6 +88,26 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.container{
+  max-width: 70rem;
+  margin: 0.5rem auto;
+  padding: 0 1rem;
+}
+
+.title-section{
+  text-align: center;
+  font-family: 'Readex Pro',  Helvetica, sans-serif;
+  font-size: 1.375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 108.523%; /* 23.875px */
+  letter-spacing: 1.43px;
+
+  max-width: 70rem;
+  margin: 0.5rem auto;
+  padding: 0 1rem;
 }
 
 /*@media (prefers-color-scheme: light) {
