--- a/MfProdutora/src/components/results/Results.module.css
+++ b/MfProdutora/src/components/results/Results.module.css
@@ -7,11 +7,20 @@
     background-position-x: center;
     display: flex;
     align-items: flex-end;
+    margin: 0;
+    padding: 0;
 }
 
 
 .background div p{
     margin-bottom: 125px;
+}
+
+.containerResult{
+    width: 840px;
+    max-width: 60rem;
+  margin: 0 auto;
+  padding: 0;
 }
 
 h3 span{
@@ -103,7 +112,7 @@ h3{
 
 .introImages div{
     height: 290px;
-    margin-top: 10px;
+    margin-top: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,6 +122,6 @@ h3{
 }
 
 .introImages div:hover{
-    transform: scale(1.5);
+    transform: scale(1.1);
 
 }
