--- a/MfProdutora/src/components/feedback/Feedback.module.css
+++ b/MfProdutora/src/components/feedback/Feedback.module.css
@@ -1,14 +1,9 @@
 
 
-.title-feedback{
-    margin: 50px 10px;
-    color: aqua;
-    padding: 10px 10px;
-    display: block;
-    height: 10px;
-}
 
 .imgCarroussel{
     height: 500px;
     width: 300px;
+    margin-top: 50px;
 }
+
