--- a/MfProdutora/src/components/servicesPage/Services.module.css
+++ b/MfProdutora/src/components/servicesPage/Services.module.css
@@ -105,16 +105,57 @@ h3 span{
     transform: scale(1.1);
 }
 
-.carroussel{
-    background: var(--primary);
-    height: 70px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
-.carroussel h2{
-    color: var(--background);
-    padding: 0 20px;
+
+
+.mScroll {  
+    display: flex;
+    position: relative;  
+    width: 100%;
+    background: var(--primary);
+    height: 80px;
+    overflow: hidden;
+    z-index: 1; 
+    margin-bottom: 100px;
 }
+.mScroll__title {
+      display: flex;    
+      position: absolute;
+      top: 0;    
+      left: 0;
+      align-items: center;    
+      justify-content: flex-start;
+      width: 100%;    
+      height: 100%;
+      white-space: nowrap;    
+      transform: scale(1.2);
+      transition: all 1s ease;    
+}
+.mScroll__title > div {
+        display: flex;      
+        animation: scrollText 18s infinite linear;
+      }    
+.mScroll__title  h2 {
+    color: var(--background);
+        margin: 0;      
+        transition: all .3s ease;
+      }    
+      
+.mScroll__title a {
+        text-decoration: none;     
+    color: var(--background);
+    font-size: 25px;
+    margin:  0 40px;
+        
+      }    
+      
+.mScroll__title  a:hover {
+        -webkit-text-stroke: 1px white;     
+        color: white;
+      }  
+  /*div:hover {  animation-play-state: paused;
+  }*/@keyframes scrollText {
+    from {    transform: translateX(0%);
+    }  to {
+      transform: translateX(-50%);  }
+  }
