--- a/MfProdutora/src/components/results/Results.module.css
+++ b/MfProdutora/src/components/results/Results.module.css
@@ -1,7 +1,7 @@
 .background{
     background-image: url("../../assets/imgs/results.png");
     margin: 0;
-    height: 603px;
+    height: 37.688rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -13,11 +13,11 @@
 
 
 .background div p{
-    margin-bottom: 125px;
+    margin-bottom: 17.813rem;
 }
 
 .containerResult{
-    width: 840px;
+    width: 52.5rem /*840px*/;
     max-width: 60rem;
   margin: 0 auto;
   padding: 0;
@@ -30,23 +30,23 @@ h3 span{
 h3{
     display: block;
     /* height: 1000px; */
-    margin-top: 50px;
+    margin-top: 3.125rem /*50px*/;
 }
 
 /* ComponentsResults*/
 
 .TopContent{
-    margin-top:50px;
+    margin-top:3.125rem /*50px*/;
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 1.25rem /*20px*/;
     
 }
 
 .imagePerfil{
    
-   width: 217px; 
-   height: 182px;
+   width: 13.563rem /*217px*/; 
+   height: 11.375rem /*182px*/;
    border-radius: 5px;
 
    /* background-image: url("../../assets/imgs/clients/client-01.png");
@@ -64,10 +64,10 @@ h3{
 }
 
 .descript h4{
-    margin: 0 0 10px 0;
+    margin: 0 0 0.625rem /*10px*/ 0;
     padding: 0;
 
-    font-size: 22px;
+    font-size: 1.375rem /*22px*/;
     font-style: normal;
     font-weight: 400;
     line-height: 108.523%; /* 23.875px */
@@ -89,7 +89,7 @@ h3{
     margin: 0;
     padding: 0;
 
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: 108.523%; /* 17.364px */
@@ -106,13 +106,13 @@ h3{
 
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 0.625rem /*10px*/;
     justify-content: space-between;
 }
 
 .introImages div{
-    height: 290px;
-    margin-top: 18px;
+    height: 18.125rem /*290px*/;
+    margin-top: 1.125rem /*18px*/;
     display: flex;
     justify-content: center;
     align-items: center;
