--- a/MfProdutora/src/components/top-content/TopContent.module.css
+++ b/MfProdutora/src/components/top-content/TopContent.module.css
@@ -9,7 +9,7 @@
     
     align-items: center;
 
-    height: 648px;
+    height: 40.5rem; /*648px;*/
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -26,12 +26,12 @@ strong{
     font-style: normal;
     font-weight: 400;
     line-height: 102.523%; /* 53.312px */
-    letter-spacing: -1.04px;
+    letter-spacing: -0.065rem ; /*-1.04px;*/
 }
 
 p{
-    max-width: 523px;
-    margin: 20px 0; 
+    max-width: 32.688rem; /*523px;*/
+    margin: 1.25rem 0; 
 
     font-size: 1.125rem;
     font-style: normal;
