--- a/MfProdutora/src/global.css
+++ b/MfProdutora/src/global.css
@@ -32,7 +32,7 @@ a {
   font-style: normal;
   font-weight: 500;
   line-height: 102.523%; /* 16.404px */
-  letter-spacing: 2.48px; 
+  letter-spacing: 0.155rem /*2.48px*/; 
   transition: all ease .2s;
 }
 a:hover {
@@ -62,7 +62,7 @@ h3{
   font-style: normal;
   font-weight: 400;
   line-height: 102.523%; /* 53.312px */
-  letter-spacing: -1.04px;
+  letter-spacing: -0.065rem; /*-1.04px;*/
 }
 
 
@@ -101,7 +101,7 @@ button:focus-visible {
   font-style: normal;
   font-weight: 400;
   line-height: 108.523%; /* 23.875px */
-  letter-spacing: 1.43px;
+  letter-spacing: 0.089rem; /* 1.43px;*/
 
   max-width: 70rem;
   margin: 0.5rem auto;
