--- a/MfProdutora/src/components/results/Results.module.css
+++ b/MfProdutora/src/components/results/Results.module.css
@@ -17,7 +17,6 @@
 }
 
 .containerResult{
-    width: 52.5rem /*840px*/;
     max-width: 60rem;
   margin: 0 auto;
   padding: 0;
@@ -45,8 +44,7 @@ h3{
 
 .imagePerfil{
    
-   width: 13.563rem /*217px*/; 
-   height: 11.375rem /*182px*/;
+   width: 20vh /*217px*/; 
    border-radius: 5px;
 
    /* background-image: url("../../assets/imgs/clients/client-01.png");
@@ -106,13 +104,15 @@ h3{
 
     display: flex;
     flex-direction: row;
-    gap: 0.625rem /*10px*/;
-    justify-content: space-between;
+    gap: 10% /*10px*/;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .introImages div{
-    height: 18.125rem /*290px*/;
-    margin-top: 1.125rem /*18px*/;
+    width: 30% /*290px*/;
+    
+    margin-top: 3% /*18px*/;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -124,4 +124,41 @@ h3{
 .introImages div:hover{
     transform: scale(1.1);
 
+}
+
+@media (max-width: 768px){
+
+
+    .TopContent{
+        margin-top:3.125rem /*50px*/;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.525rem /*20px*/;
+        overflow: hidden;
+        
+    }
+
+    .introImages div{
+        width: 50% /*290px*/;
+        
+        margin-top: 3% /*18px*/;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        z-index: 1;
+        transition: all ease .3s;
+    }
+
+    .descript h4{
+        margin: 0 0 0.625rem /*10px*/ 0;
+        padding: 0;
+    
+        font-size: 1rem /*22px*/;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 108.523%; /* 23.875px */
+        letter-spacing: 1.43px;
+    }
 }
