--- a/MfProdutora/src/components/results/Results.module.css
+++ b/MfProdutora/src/components/results/Results.module.css
@@ -1,25 +1,22 @@
 .background{
     background-image: url("../../assets/imgs/results.png");
     margin: 0;
-    height: 37.688rem;
+    height: 635px;
+    width: 100%;
+    display: block;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-x: center;
-    display: flex;
-    align-items: flex-end;
-    margin: 0;
-    padding: 0;
 }
 
-
 .background div p{
-    margin-bottom: 17.813rem;
+    padding-top: 450px;
 }
 
 .containerResult{
     max-width: 60rem;
-  margin: 0 auto;
-  padding: 0;
+    margin: 0 auto;
+    padding: 0;
+
 }
 
 h3 span{
@@ -125,7 +122,7 @@ h3{
     transform: scale(1.1);
 
 }
-
+/*preciso melhorar essa bagunça*/
 @media (max-width: 768px){
 
 
@@ -162,3 +159,49 @@ h3{
         letter-spacing: 1.43px;
     }
 }
+
+
+
+
+
+
+
+@media (max-width: 1200px){
+    .background{
+        height: 405px;
+    }
+    
+    .background div p{
+        padding-top: 200px;
+    }
+
+}
+
+@media (max-width: 990px){
+    .background{
+        height: 355px;
+    }
+    
+    .background div p{
+        padding-top: 180px;
+    }
+
+}
+
+
+@media (max-width: 31.25rem){/*500px*/
+    .background{
+        height: 205px;
+    }
+    
+    .background div p{
+        padding-top: 130px;
+    }
+
+}
+
+
+
+
+
+
