--- a/MfProdutora/src/components/servicesPage/Services.module.css
+++ b/MfProdutora/src/components/servicesPage/Services.module.css
@@ -161,6 +161,10 @@ h3 span{
     100% { transform: translateX(-100%); }
   }
 
+ 
+  
+
+
   @media (max-width: 768px){
 
     
@@ -176,6 +180,33 @@ h3 span{
         width: 100%;
         max-width: 300px;
         margin: 0.313rem /*5px*/ 1.25rem;
+    
+    }
+    
+    .containerServices{
+        text-align: center;
+        max-width: auto;
+        margin: 0 20px;
+        padding: 0;
+    
+    }
+}
+
+@media (max-width: 768px){
+
+    
+    .cards{
+ 
+        flex-direction: column;
+        align-items: center;
+        
+        
+    }
+    
+    .card{
+        width: 90%;
+        max-width: 300px;
+        margin: 0.013rem /*5px*/ 0;
     
     }
     
