--- a/MfProdutora/src/components/feedback/Feedback.module.css
+++ b/MfProdutora/src/components/feedback/Feedback.module.css
@@ -5,7 +5,7 @@
     height: 31.25rem /*500px*/;
     width: 18.75rem /*300px*/;
     display: block;
-    margin: 20px auto; 
+    margin: 20px auto 0 auto; 
 }
 
 .arrow {
