--- a/MfProdutora/src/global.css
+++ b/MfProdutora/src/global.css
@@ -4,6 +4,7 @@
   --secondary: #17F1FF;
   --support-01: #FFFFFF;
   --support-02: #A0A0A0;
+  --support-03: #191D29;
   --background: #000510;
 
   font-family: 'Readex Pro', Helvetica, sans-serif;
