--- a/MfProdutora/src/components/footer/Footer.module.css
+++ b/MfProdutora/src/components/footer/Footer.module.css
@@ -1,21 +1,3 @@
-.footer li{
-    list-style-type: none;
-    margin: 5px 0;
-    transition: all ease .2s;
-}
-
-.footer li a{
-    cursor: pointer;
-}
-
-.about li:not(:first-child):hover,
-.contact li:not(:first-child):hover
-{
-    transform: scale(1.1);
-}
-
-
-
 
 
 .footer{
@@ -23,6 +5,18 @@
     margin: 0;
     padding: 10px 0;
 }
+
+.footer li{
+    list-style-type: none;
+    margin: 5px 0;
+    transition: all ease .2s;
+    padding: 0;
+}
+
+.footer li a{
+    cursor: pointer;
+}
+
 
 .menu{
     display: flex;
@@ -42,8 +36,62 @@
     
     margin: 0;
     padding: 0 0 20px 0;
+
     }
 
+.about li , .contact li{
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+
+
+
+
+
+
+
+.about a, .contact a{
+    font-weight: 400;
+    color: var(--support-02);
+    transition: all ease .2s;
+
+}
+
+.about a:hover, .contact a:hover{
+
+    color: var(--support-01);
+}
+
+
+.signature{
+    background: var(--background);
+    padding: 10px 0;
+    text-align: center;
+}
+
+.signature p{
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+
+
+    color: var(--support-02);
+}
+
+.signature span{
+    font-weight: 400;
+    color: var(--support-02);
+    cursor: pointer;
+    transition: all ease .2s;
+}
+
+.signature span:hover{
+    transform: scale(1.1);
+    color: var(--primary);
+
+}
 
     
 @media (max-width: 500px) {
