--- a/src/components/top-content/TopContent.module.css
+++ b/src/components/top-content/TopContent.module.css
@@ -1,5 +1,5 @@
 .imgFundo {
-    background-image: url("../../assets/imgs/top-content.png");
+    background-image: url("../../assets/imgs/topContent/top-content.png");
     margin: 0;
     padding: 0;
     background-size: cover;
@@ -8,29 +8,14 @@
 }
 
 .imgFundo div{
-    
-    align-items: center;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    text-align: start;
+    padding-top:  10%;
 }
 
-strong{
-    color: #F6F6F6;
-    text-align: center;
-    height: 100%;
-    margin: 30px 0;
-
-    /* H1R */
-    font-family: "Play", Helvetica, sans-serif;
-    font-size: 3.25rem;/*52px*/
-    font-style: normal;
-    font-weight: 400;
-    line-height: 102.523%; /* 53.312px */
-    letter-spacing: -0.065rem ; /*-1.04px;*/
+.imgFundo div > img{
+    width: 500px;
 }
+
 
 span{
     height: 100%;
@@ -57,7 +42,16 @@ button{
 
     .imgFundo {
         width: 100%;    
-        height: 100%;
+        height: 00%;
+    }
+
+    .imgFundo div{
+        text-align: start;
+        padding-top:  10%;
+    }
+    
+    .imgFundo div > img{
+        width: 400px;
     }
 
     p{
@@ -73,39 +67,51 @@ button{
   
 }
 
+@media (max-width: 700px){/*500px*/
+
+    .imgFundo {
+        background-image: url("../../assets/imgs/topContent/top-content-mobile.png");
+            
+        }
+
+        .imgFundo div{
+            text-align: start;
+            padding-top:  10%;
+        }
+        
+        .imgFundo div > img{
+            width: 200px;
+        }
+    }
+
 @media (max-width: 31.25rem){/*500px*/
 
     .imgFundo {
-        background-image: url("../../assets/imgs/top-content-mobile.png");
+        background-image: url("../../assets/imgs/topContent/top-content-mobile.png");
             
         }
-    .imgFundo div{    
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: end;
-        height: 600px;
-    }
 
-    strong{
-        height: 20px;
-        margin: 10px 0;
-
-        font-size: 2.25rem;/*52px*/
-    }
-    
+        .imgFundo div{
+            text-align: start;
+            padding-top:  40%;
+        }
+        
+        .imgFundo div > img{
+            width: 200px;
+        }
     span{
         height: 100px;
         margin: 20% 0;
     }
     
     p{
-        margin: 1.25rem 0; 
+        margin:  10px 0;
+        font-size: 14px; 
     }
     
     .imgFundo div button{
         width: 100%;
-        margin-top: 20%;
+        margin-top: 0%;
         height: 60px;
     }
 }
