--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -23,8 +23,16 @@
     flex-direction: row;
     align-items: start;
     justify-content: space-between;
+    padding: 0;
+    
 
-    flex-wrap: wrap;
+    
+}
+
+.menu li a img{
+    width: 200px;
+    margin: 0;
+    padding: 0;
 }
 
 .about h3, .contact h3{
