--- a/src/components/results/Results.module.css
+++ b/src/components/results/Results.module.css
@@ -3,8 +3,10 @@
     margin: 0;
     height: 635px;
     width: 100%;
+    max-width: 1770px;
     display: block;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
