--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -51,7 +51,6 @@
 .about li , .contact li{
     padding: 0;
     box-sizing: border-box;
-
 }
 
 
@@ -118,5 +117,12 @@
         padding: 0;
      
     }
+
+    .about li:not(:first-child) , .contact li:not(:first-child){
+ 
+        margin: 20px 0;
+        text-decoration: underline;
+    }
+   
     
 }
