--- a/src/components/team/Team.module.css
+++ b/src/components/team/Team.module.css
@@ -16,7 +16,7 @@
 
 
 .cardTeam{
-    max-width: 24%;
+    max-width: 22%;
     background-color: var(--support-03);
     border-radius: 5px;
 }
@@ -89,10 +89,29 @@
     }
     
     .cardTeam{
-        max-width: 75%;
+        max-width: 45%;
         margin: 10px 0;
+    }
+
+    .cardTeam h3{
+        font-size: 12px;
+        font-weight: 100;
+    }
+
+    .cardTeam p{
+        font-size: 12px;
+    }
+
+    .cardTeam img{
+        width: 100%;
+        margin: 0;
+        padding: 0;
     }
 }
 
-@media (max-width: 400px){/*500px*/
+@media (max-width: 340px){/*500px*/
+    .cardTeam{
+        max-width: 60%;
+        margin: 10px 0;
+    }
 }
